--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-  <string name="app_name">newsapp</string>
-  <string name="title_activity_main">newsapp</string>
-  <string name="package_name">io.ionic.starter</string>
-  <string name="custom_url_scheme">io.ionic.starter</string>
+  <string name="app_name">NewsApp</string>
+  <string name="title_activity_main">NewsApp</string>
+  <string name="package_name">com.news.app</string>
+  <string name="custom_url_scheme">com.news.app</string>
   <string name="ionic_app_id">717dddf5</string>
   <string name="ionic_channel_name">main</string>
   <string name="ionic_update_method">background</string>
